# WRoverSoftware_25-26

./: .gitignore  LICENSE  Makefile  README.md  armStation.sh  baseStation.sh  calculate_offsets.py  canableStart.sh  driverStart.sh  fast_build.sh  instructions.txt  keep_track  roverStart.sh  run.sh  run_gnss.sh  run_rtk_base_station.sh  run_state_machine_base_station.sh  sensor_data.csv  sketch_nov4d.ino
docs/: Gazebo_Plugin_Guide.md  Inertials.md  README.md  RVIZ2.md  Resources.md  TODO.md  documents.md  resources.md
gps_tools/: package.xml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
launch/: aruco_launch.py
localization_workspace/install/: local_setup.sh  setup.sh
localization_workspace/log/: latest_build
log/: latest_build
src/: compass.cpp  detector.py  distance_swerve.py  fusion.py  gps_heading.py  ground_detect.py  localization_print.py  main.py  mini_slam.py  object_avoider.py  object_detection.py  pathworkplusplustest.py  search_path_generator.py  test.py  wls_test.py
src/aruco_part/: keyboard_aruco_detection.py  keyboard_aruco_node_fixed.py  package.xml  setup.cfg  setup.py
src/autonomous/: setup.py
src/configs/: settings.py
src/gps_tools/: setup.py
src/master_finder/: package.xml  setup.cfg  setup.py
src/navigation/: package.xml  setup.py
src/object_detection/: package.xml  setup.py
src/object_detection_msgs/: CMakeLists.txt
src/pathplanning/: astar.py  graph_builder.py  multi_target.py
src/point cloud/: knn_builder.py  load_clean.py
src/rover_simulation/: .gitignore  README.md  launch.py
src/simulation/: Makefile  README.md  (+3 more)
src/wr_imu_compass/: CMakeLists.txt  package.xml
src/wr_imu_compass/src/: compass.cpp
(+310 files in other folders)
